--- a/cliente/src/app/app.component.css
+++ b/cliente/src/app/app.component.css
@@ -38,13 +38,13 @@ h1.app-app-name {
 }
 
 .section-main {
-    border: solid 1px;
+    /* border: solid 1px; */
     margin-top: 16px;
     margin-left: 16px;
     width: 70%;
 }
 .section-sidebar {
-    border: solid 1px;
+    /* border: solid 1px; */
     margin-top: 16px;
     width: 30%;
     margin-right: 16px;
