--- a/cliente/src/app/pages/home/home.component.pug
+++ b/cliente/src/app/pages/home/home.component.pug
@@ -4,8 +4,31 @@ ul
         mat-card
             mat-card-content
                 .flex-row
-                    img.img-article(src="https://www.w3schools.com/css/img_5terre.jpg", style="heig")
-                    div
+                    img.img-article(src="https://www.w3schools.com/css/img_5terre.jpg")
+                    div.margin-le-ri
+                        h3 Titulo
+                        p 
+                            | En esa instancia, Croacia se medirá con el local Rusia, que más temprano el domingo superó 4-3 a España en la definición por penales después del empate 1-1 en los 120 minutos reglamentarios.
+                            | Dinamarca se puso en ventaja a los 57 segundos por intermedio de Mathias Jorgensen, cuyo remate pegó en un pie del arquero Subasic, rebotó en el palo y cruzó la meta.
+                            | Mario Mandzukic igualó tres minutos más tarde cuando el despeje de un rival dio un rebote fortuito en un compañero y cayó a los pies del delantero, que definió de media vuelta en el borde del área chica.
+    li
+        mat-card
+            mat-card-content
+                .flex-row
+                    img.img-article(src="https://www.w3schools.com/css/img_5terre.jpg")
+                    div.margin-le-ri
+                        h3 Titulo
+                        p 
+                            | En esa instancia, Croacia se medirá con el local Rusia, que más temprano el domingo superó 4-3 a España en la definición por penales después del empate 1-1 en los 120 minutos reglamentarios.
+                            | Dinamarca se puso en ventaja a los 57 segundos por intermedio de Mathias Jorgensen, cuyo remate pegó en un pie del arquero Subasic, rebotó en el palo y cruzó la meta.
+                            | Mario Mandzukic igualó tres minutos más tarde cuando el despeje de un rival dio un rebote fortuito en un compañero y cayó a los pies del delantero, que definió de media vuelta en el borde del área chica.
+    li
+        mat-card
+            mat-card-content
+                .flex-row
+                    img.img-article(src="https://www.w3schools.com/css/img_5terre.jpg")
+                    div.margin-le-ri
+                        h3 Titulo
                         p 
                             | En esa instancia, Croacia se medirá con el local Rusia, que más temprano el domingo superó 4-3 a España en la definición por penales después del empate 1-1 en los 120 minutos reglamentarios.
                             | Dinamarca se puso en ventaja a los 57 segundos por intermedio de Mathias Jorgensen, cuyo remate pegó en un pie del arquero Subasic, rebotó en el palo y cruzó la meta.
