--- a/cliente/src/app/variables.css
+++ b/cliente/src/app/variables.css
@@ -21,3 +21,20 @@
     display: flex;
     flex-direction: column;
 }
+.flex-row{
+    display: flex;
+    flex-direction: row;
+}
+
+.margin-left {
+    margin-left: 16px;
+}
+
+.margin-right {
+    margin-right: 16px;
+}
+
+.margin-le-ri {
+    margin-left: 16px;
+    margin-right: 16px;
+}
