--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -32,6 +32,23 @@
               </div>
             </form>
           </div>
+          <div class="margin-le-ri">
+            <mat-card class="margin-bottom"> 
+              <mat-card-content>
+                <p>hola</p>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="margin-bottom"> 
+              <mat-card-content>
+                <p>hola</p>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="margin-bottom"> 
+              <mat-card-content>
+                <p>hola</p>
+              </mat-card-content>
+            </mat-card>
+          </div>
         </div>
       </div>
     </mat-sidenav-content>
