--- a/cliente/src/app/app.component.pug
+++ b/cliente/src/app/app.component.pug
@@ -25,3 +25,14 @@
                                         mat-icon {{search.value ? 'close' : 'search'}}
                             div
                                 button(mat-button,color="primary", type="button", [disabled]="!newForm.valid || newForm.pristine") Buscar
+                    .margin-le-ri
+                        mat-card.margin-bottom 
+                            mat-card-content
+                                p hola
+                        mat-card.margin-bottom 
+                            mat-card-content
+                                p hola
+                        mat-card.margin-bottom 
+                            mat-card-content
+                                p hola
+                            
