--- a/cliente/src/app/pages/home/home.component.pug
+++ b/cliente/src/app/pages/home/home.component.pug
@@ -27,7 +27,7 @@ ul
             mat-card-content
                 .flex-row
                     img.img-article(src="https://www.w3schools.com/css/img_5terre.jpg")
-                    div.margin-le-ri
+                    .margin-le-ri
                         h3 Titulo
                         p 
                             | En esa instancia, Croacia se medirá con el local Rusia, que más temprano el domingo superó 4-3 a España en la definición por penales después del empate 1-1 en los 120 minutos reglamentarios.
