--- a/cliente/src/app/variables.css
+++ b/cliente/src/app/variables.css
@@ -34,6 +34,14 @@
     margin-right: 16px;
 }
 
+.margin-bottom {
+    margin-bottom : 16px;
+}
+
+.margin-top {
+    margin-top : 16px;
+}
+
 .margin-le-ri {
     margin-left: 16px;
     margin-right: 16px;
