--- a/cliente/src/app/app.component.pug
+++ b/cliente/src/app/app.component.pug
@@ -5,6 +5,7 @@
         h1.app-app-name Jhonatan Meza I.
         span.cs-spacer
         a(mat-button, *ngFor="let ruta of rutas", [routerLink]="['/'+ruta.path]") {{ruta.item}}
+        a(mat-button, (click)="openModalCropperJs()") CropperJs
     mat-sidenav-container.app-sidenav-container([style.marginTop.px]="mobileQuery.matches ? 56 : 0")
         mat-sidenav(#snav, [mode]="mobileQuery.matches ? 'over' : 'side'", [fixedInViewport]="mobileQuery.matches", fixedTopGap="56")
             mat-nav-list
