--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -17,18 +17,15 @@
           <router-outlet></router-outlet>
         </div>
         <div class="section-sidebar">
-          <div class="text-right">
+          <div class="text-right margin-bottom">
             <form [formGroup]="newForm">
-              <div>
+              <div class="margin-right">
                 <mat-form-field>
-                  <input matInput type="text" placeholder="Ingresa tu busqueda" formControlName="search">
-                  <button mat-button matSuffix mat-icon-button aria-label="Clear" type="button" (click)="search.setValue('')">
-                    <mat-icon>{{search.value ? 'close' : 'search'}}</mat-icon>
+                  <input matInput type="text" placeholder="Ingresa tu busqueda" formControlName="search" (keyup.enter)="searchMagic();">
+                  <button mat-button matSuffix mat-icon-button aria-label="Clear" type="button" (click)="searchMagic();">
+                    <mat-icon>search</mat-icon>
                   </button>
                 </mat-form-field>
-              </div>
-              <div>
-                <button mat-button color="primary" type="button" [disabled]="!newForm.valid || newForm.pristine">Buscar</button>
               </div>
             </form>
           </div>
